--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^9.1.2",
-    "@hapi/hapi": "^20.1.3",
+    "@hapi/hapi": "^20.2.1",
     "@hapi/inert": "^6.0.3",
     "@hapi/joi": "^17.1.1",
     "arangojs": "^7.5.0",
     "dotenv": "^9.0.2",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "faker": "^5.5.3",
-    "request": "^2.88.2",
-    "uuid": "^8.3.2"
+    "request": "^2.88.2"
   }
 }
