Fix bug in launching of debug mode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\seeds\\index.js"
+      "program": "${workspaceFolder}\\seed\\index.js"
     }
   ]
 }
