Implement seed for neo4j

--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,6 @@ PORT=5050
 ORIGIN_ALLOWED=*
 
 DB_HOST=localhost
-DB_PORT=8529
-DB_DATABASE=_system
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=neo4j
+DB_USERNAME=neo4j
+DB_PASSWORD=secret
