--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@hapi/hapi": "^20.2.1",
     "@hapi/inert": "^6.0.3",
     "@hapi/joi": "^17.1.1",
-    "arangojs": "^7.5.0",
     "dotenv": "^9.0.2",
     "md5": "^2.3.0",
+    "moment": "^2.29.1",
+    "neo4j-driver": "^4.4.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
