--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hapi/inert": "^6.0.3",
     "@hapi/joi": "^17.1.1",
     "dotenv": "^9.0.2",
+    "http-status-codes": "^2.2.0",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "neo4j-driver": "^4.4.1",
